Desactivada la opción require_secure_transport en Azure

--- a/env/.env
+++ b/env/.env
@@ -1,7 +1,7 @@
 //Variable entorno BD
 
-DB_HOST = localhost
-DB_USER = root
+DB_HOST = hechoenperudb.mysql.database.azure.com
+DB_USER = accordss
 DB_PASSWORD = Amarillo121222$
 DB_DATABASE = hechoenperudb
 
