--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,14 @@
 	"version": 2,
 	"builds": [
 		{
-			"src": "pages/**/*",
-			"use": "@vercel/next"
+			"src": "app.js",
+			"use": "@vercel/node"
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "/app.js"
 		}
 	],
 	"headers": [
