Actualización de configuración CORS con variable de entorno

--- a/env/.env
+++ b/env/.env
@@ -7,3 +7,4 @@ DB_DATABASE = hechoenperudb
 
 SESSION_SECRET = Amarillo121222$$$
 NODE_ENV = production
+LINK_DESPLOY = https://hecho-en-peru-8n034rrxm-accordss-projects.vercel.app
