--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "app.js",
+			"dest": "/app.js",
 			"methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
 			"headers": {
 				"Access-Control-Allow-Origin": "*"
