--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,22 @@
 	],
 	"routes": [
 		{
+			"src": "/scripts/(.*)",
+			"dest": "/public/scripts/$1"
+		},
+		{
+			"src": "/styles/(.*)",
+			"dest": "/public/styles/$1"
+		},
+		{
+			"src": "/images/(.*)",
+			"dest": "/public/images/$1"
+		},
+		{
+			"src": "/views/(.*)",
+			"dest": "/public/views/$1"
+		},
+		{
 			"src": "/(.*)",
 			"dest": "/app.js",
 			"methods": ["GET", "OPTIONS", "PATCH", "DELETE", "POST", "PUT"],
